*** empty log message ***

--- a/src/scalars/ChangeLog
+++ b/src/scalars/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-08  Andras Varga
+
+	* default chart settings can be saved
+
 2005-03-31  ------ omnetpp-3.1 released ------
 
 2005-03-25  Andras Varga
