--- a/doc/src/manual/history.tex
+++ b/doc/src/manual/history.tex
@@ -6,6 +6,8 @@
 \tabheadcol
 \tbf{Date} & \tbf{Author} & \tbf{Change}\\\hline
 %%
+2005/07 & AV & updated for the {\opp} 3.2 release\\\hline
+%%
 2005/03 & AV & updated for the {\opp} 3.1 release\\\hline
 %%
 2004/12 & AV & updated for the {\opp} 3.0 release\\\hline
