--- a/src/scalars/ChangeLog
+++ b/src/scalars/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-10  Andras Varga
+
+	* prepared for the fact that a single sca file may contain several 
+	runs with the same run number (as a side effect, memory requirement 
+	got decreased and performance increased)
+
 2005-07-08  Andras Varga
 
 	* default chart settings can be saved
