--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-21  Andras Varga
+
+	* inspector.tcl: added support for custom items on the context
+	menu (e.g. right-click on a router, "Inspect Routing Table,,,"
+	Usage: via extendContextMenu proc.
+
 2005-07-20  Andras Varga
 
 	* inspector.tcl, structinsp.cc: in message inspector Fields and 
