*** empty log message ***

--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -2,7 +2,7 @@
 
 	* inspector.tcl: added support for custom items on the context
 	menu (e.g. right-click on a router, "Inspect Routing Table,,,"
-	Usage: via extendContextMenu proc.
+	Usage: via extendContextMenu proc. [idea: Wei Yang Ng]
 
 2005-07-20  Andras Varga
 
