--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-23  Andras Varga
+
+	* cwatch.cc: WATCH implementation changed
+
 2005-04-27  Andras Varga
 
 	* cobject.cc: fixed bug in cObject copy ctor. Problem hasn't surfaced
