--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-23  Andras Varga
+
+	* cwatch.h: WATCH implementation changed
+
 2005-06-25  Andras Varga
 
 	* cpar.h: added default value to type parameter of setFromText().
