--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -4,6 +4,8 @@
 
 	* cpar.cc: added isConstant() member to cPar
 
+	* cgate.cc: arrivedOn() impl change, see include/ChangeLog
+
 2005-07-23  Andras Varga
 
 	* cwatch.cc: WATCH implementation changed
