--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -14,6 +14,9 @@
 	* cxmlelement.h: added getFirstChildWithTagName(const char *tagname)
 	and getNextSiblingByTagName(const char *tagname) to cXMLElement
 
+	* envirext.h: added flush() to cOutputVectorManager and cOutputScalar-
+	Manager classes
+
 2005-07-23  Andras Varga
 
 	* cwatch.h: WATCH() implementation changed: now anything can be watched 
