--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,10 @@
+2005-07-26  Andras Varga
+
+	* integrated several patches from Michael Franzen:
+	- "Open imported files automatically"
+	- "Auto-calculate gate size"
+	- "Set "nocheck" for new modules"
+
 2005-07-24  Andras Varga
 
 	* checked in patches from Michael Franzen: 
@@ -50,7 +57,7 @@
 
 	* ebnf.y: malloc.h changed to stdlib.h. Change needed for Mac OS/X 
 	[patch from Michael Tuexen]
-
+	
 2004-11-23  ------ omnetpp-3.0b1 released ------
 
 2004-11-03  ------ omnetpp-3.0a9 released ------
