--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-05  Andras Varga
+
+	* opp_msgc: generate both const and non-const getter methods for 
+	fields of class or struct type.
+
 2005-08-04  Andras Varga
 
 	* opp_msgc: it is no longer required to write out "fields:" in an
