--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -3,6 +3,9 @@
 	* opp_msgc: generate both const and non-const getter methods for 
 	fields of class or struct type.
 
+	* opp_msgc: generate a protected and unimplemented operator==(), 
+	to prevent accidental usage of compiler-generated one
+
 2005-08-04  Andras Varga
 
 	* opp_msgc: it is no longer required to write out "fields:" in an
