--- a/src/sim/netbuilder/ChangeLog
+++ b/src/sim/netbuilder/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-07  Andras Varga
+
+	* cnednetworkbuilder.cc: don't look for module type if module vector 
+	size is zero
+
 2005-07-26  Andras Varga
 
 	* cnednetworkbuilder.cc: didn't check gate directions on connecting
