--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-07  Andras Varga
+
+	* cppgenerator.cc: don't look for module type if module vector size 
+	is zero.
+
 2005-07-06 Andras Varga
 
 	* ned.dtd, ned.y, etc: added support for message declarations in msg 
