--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-14  Andras Varga
+
+	* opp_msgc: adapted to dup() return type change, see include/ChangeLog
+
 2005-08-05  Andras Varga
 
 	* opp_msgc: generate both const and non-const getter methods for 
